<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/color_background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwalk_name_text"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/color_text"/>

    <EditText
        android:id="@+id/cw_nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwalk_loc_text"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/color_text"/>

    <EditText
        android:id="@+id/cw_locField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwalk_city_text"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/color_text"/>

    <EditText
        android:id="@+id/cw_cityField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwalk_county_text"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/color_text"/>

    <EditText
        android:id="@+id/cw_countyField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cw_broadcastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createwalk_broadcast_text" />

    <EditText
        android:id="@+id/cw_ipField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>