<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_text"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.19"
        android:src="@drawable/vw_login" />

    <TextView
        android:id="@+id/loginResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Enter login info:"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/color_text"/>

    <EditText
        android:id="@+id/loginUserNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_uname_hint" />

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pass_hint"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_text" />

</LinearLayout>