<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/color_background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/color_text"/>

    <TextView
        android:id="@+id/welcome_userNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" android:textColor="@color/color_text"/>

    <Button
        android:id="@+id/welcome_createWalkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_createwalk_text" />

    <Button
        android:id="@+id/welcome_logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logout_text" />

</LinearLayout>